# glimpse-cli

./: Cargo.toml  README.md
src/: core.rs  error.rs  lib.rs  main.rs
src/cli/: dispatch.rs  mod.rs
