[package]
name = "glimpse-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
## AWS SDK(必要なもののみ)
aws-config = "1.8.1"
aws-sdk-ec2 = "1.144.0"
aws-sdk-sts = "1.76.0"

## 日時処理
chrono = { version = "0.4.41", features = ["serde"] }

## CLI
clap = { version = "4.5.40", features = ["derive"] }

## ホームディレクトリ取得
home = "0.5.11"

## データ処理
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

## エラーハンドリング
thiserror = "2.0.12"

## 非同期処理
tokio = { version = "1.46.1", features = ["full"] }
